ADMINUI-1152 packages and networks ui spacing consistency issue

--- a/less/app.less
+++ b/less/app.less
@@ -16,7 +16,7 @@ html { height: 100%; }
   border: none; 
 
   h1 {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: 300;
     small.uuid {
       text-transform: lowercase; 
@@ -268,6 +268,7 @@ h4.alert-heading { font-weight: bold; font-size: 14px; }
 
 #page-image {
   .page-header {
+    .version { color: @grayLight; font-size: 18px;}
     .resource-status {
       .active { color: @green; }
       .unactivated { color: @yellow;}
@@ -669,7 +670,6 @@ ul.attributes {
   }
 
   #list {
-    clear: both;
 
     ul li a { 
       color: @grayLight;
